syntax = "proto3";

option go_package = "gitlab.com/vund5/usermanager/pkg/api";

package api;

service UserManager {
    rpc CreateUser (CreateUserRequest) returns (CreateUserReply) {}
    rpc GetUser (GetUserRequest) returns (GetUserReply) {}
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply) {}
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply) {}
    rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersReply) {}
}

message User {
    string name = 1;
    string email = 2;
    string password = 3;
}

message Empty {
}

message Id {
    int64 id = 1;
}

message Change {
    oneof data {
        string name = 2;
        string email = 3;
        string password = 4;
    }
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}
message CreateUserReply {
    string message = 1;
}

message GetUserRequest {
    int64 id = 1;
}
message GetUserReply {
    string message = 1;
}

// message UpdateUserRequest {
//     int64 id = 1;
//     repeated Change changes = 2;
// }
// message UpdateUserReply {
//     string message = 1;
// }

message UpdateUserRequest {
    User user = 1;
}
message UpdateUserReply {
    string message = 1;
}

message DeleteUserRequest {
    int64 id = 1;
}
message DeleteUserReply {
    string message = 1;
}

// message GetAllUsersRequest {
//     uint32 limit = 1;
//     uint32 offset = 2;
// }

// message GetAllUsersReply {
//     repeated User users = 1;   
//     uint64 total = 2;
//     bool has_more = 3;
//     uint64 next_cursor = 4;
// }

message GetAllUsersRequest {
}
message GetAllUsersReply {
    repeated User userList = 1;
}